pkgs/script-exec/src/snapshots/script_exec__tests__tests__main_failure.snap
---
source: src/tests.rs
info:
  program: script-exec
  args:
    - failing=./examples/failing.sh
---
success: false
exit_code: 1
----- stdout -----
⏳ failing
[1A[2K❌ failing [<SECONDS>s]
Output:
should fail

----- stderr -----
