pkgs/script-exec/src/snapshots/script_exec__tests__tests__main_failure_emoji.snap
---
source: src/tests.rs
info:
  program: script-exec
  args:
    - "--style=emoji"
    - failing=./examples/failing.sh
---
success: false
exit_code: 1
----- stdout -----
⏳ failing
[1A[2K❌ failing [0.01s]
Output:
should fail

----- stderr -----
