pkgs/script-exec/src/snapshots/script_exec__tests__tests__main_no_arguments.snap
---
source: src/tests.rs
info:
  program: script-exec
  args: []
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
No paths provided
