pkgs/script-exec/src/snapshots/script_exec__tests__tests__main_success_emoji.snap
---
source: src/tests.rs
info:
  program: script-exec
  args:
    - "--style=emoji"
    - success=./examples/success.sh
---
success: true
exit_code: 0
----- stdout -----
⏳ success
[1A[2K✅ success [<SECONDS>s]

----- stderr -----
