pkgs/script-exec/src/snapshots/script_exec__tests__tests__main_success_systemd.snap
---
source: src/tests.rs
info:
  program: script-exec
  args:
    - "--style=systemd"
    - success=./examples/success.sh
---
success: true
exit_code: 0
----- stdout -----
[38;5;11m[WAIT][39m success
[1A[2K[38;5;10m[ OK ][39m success [<SECONDS>s]

----- stderr -----
